--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -2,6 +2,10 @@
   padding: 0 2rem;
 }
 
+.myColor{
+  color: red;
+}
+
 .main {
   min-height: 100vh;
   padding: 4rem 0;
@@ -10,6 +14,10 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.listWithNoBullets {
+  list-style-type: none;
 }
 
 .footer {
@@ -120,9 +128,11 @@
   .footer {
     border-color: #222;
   }
+
   .code {
     background: #111;
   }
+
   .logo img {
     filter: invert(1);
   }
